# ups

./: .networkplayer.cxx.swp  CMakeLists.txt  algono.cxx  algono.h  algorithm.cxx  algorithm.h  card.cxx  card.h  config.cxx  config.h  deck.cxx  deck.h  game.cxx  game.h  hand.cxx  hand.h  lang.h  main.cxx  multiplegames.cxx  multiplegames.h  networkplayer.cxx  networkplayer.h  person.cxx  person.h  programmerbot.cxx  programmerbot.h  run  semaphore.cxx  semaphore.h  startgame.cxx  startgame.h  stdmcr.cxx  stdmcr.h
client/: compile.sh
client/src/cards/animation/: .Animation.java.swp  .Callback.java.swp  .Layer.java.swp  .LayerLoader.java.swp  .LayerManager.java.swp  .PredefinedAnimations.java.swp  Animation.java  Callback.java  Layer.java  LayerLoader.java  LayerManager.java  PredefinedAnimations.java
client/src/cards/client/: .Client.java.swp  .Common.java.swp  .CreateGameWindow.java.swp  .GameWindow.java.swp  .LoginWindow.java.swp  .Main.java.swp  Client.java  Common.java  CreateGameWindow.java  GamePanel.java  GameWindow.java  LoginWindow.java  Main.java  Player.java  Timeout.java
client/src/client/: Client.java  Common.java  CreateGameWindow.java  GameWindow.java  LoginWindow.java  Main.java
networking/: CMakeLists.txt  client.cxx  client.h  commands.cxx  commands.h  commonnetwork.cxx  commonnetwork.h  lang.h  server.cxx  server.h
tests/: algono_test.cxx  algorithm_test.cxx  card_test.cxx  deck_test.cxx  game_test.cxx  hand_test.cxx  person_test.cxx  test.cxx  testing.h
